[package]
name = "red_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true
opt-level = 1

[profile.release]
strip = true
lto = "fat"
panic = "abort"

[dependencies]
anyhow = "1.0.80"
fastnbt = "2.4.4"
flate2 = "1.0.28"
fs-err = "2.11.0"
petgraph = "0.6.4"
red_runtime = { path = "./crate/RedRuntime" }
serde = { version = "1.0.197", features = ["derive"] }
